--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -3,18 +3,37 @@ body {
     font-family: Calibri, Arial, Helvetica, sans-serif;
     color: #222222;
     background-color: #fff;
+    align-content: center;
 }
 .main_container {
-    float: left; align-content: center; height: auto; width: auto;
-    margin-top:0.5vw; margin-bottom: 1vw; margin-left:2vw; padding-top: 0.25vw; padding-bottom: 2.5vw;
-    box-shadow: rgba(0, 0, 0, 0.05) 0 0 0 1px, rgb(209, 213, 219) 0 0 0 1px inset;
+    margin: 0 auto;
+    width: 1800px;
+    margin-bottom: 40px;
+}
+.main_container .title_div * {
+    margin: 10px;
+    padding: 0;
 }
 .container {
     float: left; display: table-cell; vertical-align:top; text-align: center; height: auto; padding-top: 0.5vw;
     padding-bottom: 0.5vw; padding-right: 0.5vw;
     border: 0 solid black;
     font-size: large;
+    padding: 20px 40px;
+    margin: 10px;
+    border-radius: 10px;
+    box-shadow: rgba(0, 0, 0, 0.05) 0 0 0 1px, rgb(209, 213, 219) 0 0 0 1px inset;
+    text-align: left;
+    align-content: left;
 }
+.container h2 {
+    text-align: left;
+    margin-bottom: 5px;
+}
+.container p { 
+    text-align: left;
+}
+
 
 .svg_line_plot {
     float:left; align-content: center; height: auto; width: 85%;
@@ -29,4 +48,26 @@ body {
     color: white;
     padding: 5px 10px;
     border-radius: 3px;
+}
+
+/* Style the dropdown */
+#featureSelect {
+    padding: 10px;
+    font-size: 16px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    background-color: #f9f9f9;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    appearance: none;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    cursor: pointer;
+    outline: none;
+    margin-bottom: 20px; /* Add some space below the dropdown */
+}
+
+.info_box_wrapper {
+    width: 400px;
+    height: 635px;
+    overflow: scroll;
 }
