Change heatmap color and PCA values

--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,7 @@
 
         <div class="title_div">
             <h1>InfoVis UE 2024</h1>
-            <p>Alina Jaud (MATNR), Jakob Kohlhas (12208214)</p>
+            <p>Alina Jaud (12209471), Jakob Kohlhas (12208214)</p>
         </div>
 
         <!-- Heatmap -->
